<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Time to Journey</string>
    <string name="air_company_name" translatable="false">Infinity Sky Airlines</string>
    <string name="empty_posts" translatable="false">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="retry_loading" translatable="false">Retry</string>
    <string name="error_loading" translatable="false">Something went wrong. Try again later</string>
    <string name="seats_type" translatable="true">Seats type:</string>
    <string name="child" translatable="true">Child</string>
    <string name="infant" translatable="true">Infant</string>
    <string name="start_city">%1$s (%2$s)</string>
    <string name="end_city">%1$s (%2$s)</string>
    <string name="service_class" translatable="true">Service Class: %1$s</string>
    <string name="service_class_economy" translatable="true">Economy</string>
    <string name="order_button" translatable="true">Order %1$s</string>
    <string name="adult">Adult</string>

</resources>
